[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/Buttons/HabilityButton.gd" type="Script" id=1]
[ext_resource path="res://Images/Buttons/HabilityButton/Normal.png" type="Texture" id=2]
[ext_resource path="res://Images/Buttons/HabilityButton/Pressed.png" type="Texture" id=3]
[ext_resource path="res://Images/Habilities/Shield.png" type="Texture" id=4]
[ext_resource path="res://Images/Buttons/HabilityButton/Hover.png" type="Texture" id=5]
[ext_resource path="res://Images/Buttons/HabilityButton/Disabled.png" type="Texture" id=6]

[node name="HabilityButton" type="TextureButton"]
anchor_left = -0.012
anchor_top = -0.022
anchor_right = 0.012
anchor_bottom = 0.022
margin_left = -16.64
margin_top = -16.16
margin_right = 16.64
margin_bottom = 16.16
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 32, 32 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
expand = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[connection signal="button_down" from="." to="." method="_on_HabilityButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_HabilityButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_HabilityButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_HabilityButton_mouse_exited"]
